Adding solution for problem 24